--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,22 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-        #logo{
-        }
-        body{
-            background-color: #ebeff5;
-        }
-        #total-orders{
-            background-color: #4cb4c7;
-        }
-        #orders-delivered{
-            background-color: #7abecc;
-        }
-        #orders-pending{
-            background-color:#7CD1C0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
 </head>
 <body>
     {% include 'accounts/navbar.html' %}
